[package]
name = "xosd-sys"
version = "2.2.14"
authors = ["Chronophylos"]
description = "Raw bindings to the xosd library"
links = "xosd"
edition = "2018"
keywords = ["xosd", "x11", "ffi"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/Chronophylos/xosd-rs"
documentation = "https://docs.rs/xosd-sys"
license = "MIT OR Apache-2.0"

[build-dependencies]
bindgen = "0.55"
